# html-splitter

./: README.md  msg_split.py  pyproject.toml  split_msg.py  test_msg_split.py
