[tool.poetry]
name = "split_html_project"
version = "0.1.0"
description = "Splitting HTML into correct fragments for corporate messenger."
authors = ["Gurevich Maxim <maxg2015maxg@gmail.com>"]
license = "MIT"

python = "^3.8"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
click = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
